--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
     <main>
         <div class="container">
             <!--! IDEA OF CAROUSEL -->
-            <div class="row justify-content-center">
-                <div class="col-8">
-                    <figure><img class="img-fluid" src="img/01.webp" alt="Spiderman"></figure>
-                </div>
+            <div id="img-wrapper" class="  gallery row justify-content-center">
+                <i id="prev" class="fa-solid fa-circle-arrow-up fa-2xl"></i>
+                <!-- <div class="col-8">
+                    <img class="" src="img/01.webp" alt="Spiderman">
+                    <div class="img-text">
+                        <h5>Marvel\'s Spiderman Miles Morale</h5>
+                        <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
+                    </div>
+                </div> -->
+                <i id="next" class="fa-solid fa-circle-arrow-down fa-2xl"></i>
             </div>
         </div>
     </main>
