--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <main>
         <div class="container">
             <!--! IDEA OF CAROUSEL -->
-            <div id="img-wrapper" class="  gallery row justify-content-center">
+            <div id="img-wrapper" class=" row justify-content-center">
                 <i id="prev" class="fa-solid fa-circle-arrow-up fa-2xl"></i>
-                <!-- <div class="col-8">
+                <!-- <div class="col-8 gallery">
                     <img class="" src="img/01.webp" alt="Spiderman">
                     <div class="img-text">
                         <h5>Marvel\'s Spiderman Miles Morale</h5>
