event listener update

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <main>
         <div class="container">
             <i id="prev" class="fa-solid fa-circle-arrow-up fa-2xl"></i>
+
             <!--! IDEA OF CAROUSEL -->
             <div id="img-wrapper" class=" row justify-content-center">
-                <!-- <div class="col-8 gallery">
+                <!-- <div class="col-8 gallery active">
                     <img class="" src="img/01.webp" alt="Spiderman">
                     <div class="img-text">
                         <h5>Marvel\'s Spiderman Miles Morale</h5>
