--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- STYLE -->
     <link rel="stylesheet" href="style.css">
+    <!-- JS -->
+    <script defer src="script.js"></script>
 </head>
 <body>
     <main>
         <div class="container">
+
             <i id="prev" class="fa-solid fa-circle-arrow-up fa-2xl"></i>
 
             <!--! IDEA OF CAROUSEL -->
@@ -27,10 +30,11 @@
                     </div>
                 </div> -->
             </div>
+
             <i id="next" class="fa-solid fa-circle-arrow-down fa-2xl"></i>
 
         </div>
     </main>
-    <script src="script.js"></script>
+    
 </body>
 </html>
